--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "unified-ci-action",
-  "version": "0.1.0",
+  "version": "1.2.0",
   "private": true,
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "build": "ncc build src/index.js -o dist",
-    "lint": "node -c src/index.js",
-    "test": "node -e \"console.log('add tests later')\""
+    "build": "tsup src/index.ts --format esm --target node20 --platform node --minify --sourcemap --out-dir dist",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "clean": "rm -rf dist"
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@actions/github": "^6.0.0",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.38.1"
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^22.0.0",
+    "tsup": "^8.0.0",
+    "typescript": "^5.6.0"
   }
 }
